# tey.sh

./: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: eslint.yml  pages.yml
content/: about.md  home-tui.md  home.md  projects.md  skills.md
src/: App.svelte  app.css  app.d.ts  app.html  vite.d.ts
src-rust/: Cargo.toml
src-rust/src/: app.rs  lib.rs  terminal.rs  util.rs
src-rust/src/cli/: mod.rs  render_md.rs
src-rust/src/cli/commands/: clear.rs  mod.rs  rm.rs  tey_sh.rs
src-rust/src/cli/emulate/: history.rs  mod.rs  text_input.rs
src-rust/src/content/: mod.rs  render_md.rs
src-rust/src/demo/: app.rs  root.rs  tabs.rs  term.rs  theme.rs
src-rust/src/demo/tabs/: about.rs  email.rs  recipe.rs  traceroute.rs
src-rust/src/tui/: app.rs  mod.rs
src-rust/src/tui/content/: mod.rs  root.rs
src-rust/src/tui/content/tabs/: about.rs  home.rs  mod.rs  projects.rs  skills.rs
src-rust/src/tui/demo/: mod.rs
src-rust/src/tui/demo/tabs/: about.rs  email.rs  recipe.rs  traceroute.rs  weather.rs
src/css/: app.css  prism.css
src/lib/: AppModeButton.svelte  Article.svelte  ErrorMessage.svelte  Footer.svelte  Header.svelte  Layout.svelte  NoScript.svelte  ProjectCard.svelte  ShowMore.svelte  Tabs.svelte  appMode.ts
src/lib/Menu/: Menu.svelte  MenuItem.svelte
src/lib/code/: CopyCodeButton.svelte  copyCodeButton.ts
src/lib/logo-links/: GitHub.svelte  Matrix.svelte
src/lib/md-elements/: InfoBox.svelte  WarnBox.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/404/: +page.svelte
src/routes/TIL/: +page.server.ts  +page.svelte
src/routes/TIL/[slug]/: +page.svelte  +page.ts
static/: site.webmanifest
til-content/: 001_bfcache_pitfalls_in_sveltekit.md  001_post.md  002_post.md  002_subprocess_pipe_deadlocks.md  003_phantom_types_in_typescript.md  004_prevent_code_analysis_during_sveltekit_build.md
