[package]
name = "src-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
xterm-js-rs = { git="https://github.com/TeyKey1/xterm-js-rs", features=["xterm-addon-fit", "crossterm"]}
crossterm = {git = "https://github.com/TeyKey1/crossterm", features = ["event-stream"]}
web-sys = {version = "0.3", features = ["Window", "Document"]}
console_error_panic_hook = "0.1"
ratatui = {git = "https://github.com/TeyKey1/ratatui"}
anyhow = "1.0"
lazy_static = "1.4"
itertools = "0.11"
palette = "0.7"
unicode-width = "0.1"
wasm-bindgen-futures = "0.4"
futures-util = "0.3"
log = "0.4"
wasm-logger = "0.2"
wee_alloc = "0.4"
colored = "2.0"

[profile.release]
opt-level = "s" # small code size (due to web)
